# hello-python

./: CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  run.sh
.github/workflows/: commit.yml  release.yml  test-release.yml
docs/: index.html  main.html
trallnags_hello_python/: main.py
